[package]
name = "savne-ssh-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.4", default-features = false, features = ["glow"] }
home = "0.5.3"
cli-clipboard = "0.2.1"

